--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task 2</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="js/vue.js"></script>
     <script defer src="js/main.js"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <title>App</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="app">
-    <Todo></Todo>
-</div>
+    <div id="app">
+        <column></column>
+    </div>
 </body>
 </html>
